# artof-utils

./: .gitignore  README.md  README.rst  pyproject.toml
.github/workflows/: ci.yml  test-and-deploy.yml
tests/: test_field.py
tests/files/robot/: config.json  redis.init.json  settings.json  types.json
tests/files/robot/field/example/: info.json
tests/files/robot/field/example/geofence/: geofence.dbf  geofence.shp
tests/files/robot/field/example/traject/: Traject.qix  Traject.shp  Traject.shx
tests/files/robot/field/example1/: info.json
tests/files/robot/field/example1/geofence/: geofence.shx
tests/files/robot/field/example_discrete/: info.json
tests/files/robot/field/example_discrete/geofence/: geofence.shp  geofence.shx
tests/files/robot/field/test_tv115_drive_in/: info.json
tests/files/robot/field/test_veld_tv115/: info.json
tests/files/robot/implement/: active-tool.json  auto-label.json  brander.json  penetrometer.json  spray-boom.json
tests/files/shapefile/linestring/: linestring.qix  linestring.shp  linestring.shx
tests/files/shapefile/multipoints/: multipoints.dbf  multipoints.qix  multipoints.shp  multipoints.shx
tests/files/shapefile/multipoints2/: points.dbf  points.shp  points.shx
tests/files/shapefile/points/: points.csv  points.dbf  points.shp  points.shx
tests/files/shapefile/polygon/: polygon.dbf
tests/files/shapefile/polygons/: polygons.dbf  polygons.shp  polygons.shx
tests/files/states/: states-pitch.json  states.json
tests/files/traject/: complex.csv  simple.csv
(+20 files in other folders)
